--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,9 @@
   "prettier.useTabs": false,
   "prettier.semi": true,
   "prettier.trailingComma": "all",
+  "prettier.arrowParens": "avoid",
   "vetur.validation.script": true,
-  "vetur.validation.template": true,
+  "vetur.validation.template": false,
   "vetur.format.styleInitialIndent": true,
   "vetur.format.scriptInitialIndent": true,
   "vetur.format.defaultFormatter.js": "prettier-eslint",
