--- a/02-real_world_vuejs/01/package.json
+++ b/02-real_world_vuejs/01/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "feather-icons": "^4.28.0",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
