--- a/02-real_world_vuejs/package.json
+++ b/02-real_world_vuejs/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "feather-icons": "^4.28.0",
+    "json-server": "^0.16.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
